# cot-probing

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  d  pyproject.toml  setup.py
cot_probing/: __init__.py  activations.py  attn_probes.py  attn_probes_case_studies.py  attn_probes_data_proc.py  attn_probes_utils.py  cot_evaluation.py  diverse_combinations.py  dummy.py  eval.py  generation.py  patching.py  plots.py  probing.py  qs_evaluation.py  qs_generation.py  questions_generation.py  steering.py  swapping.py  task.py  typing.py  utils.py  vis.py
notebooks/: analyze-dataset-scripts-pipeline.py  analyze_probe_attn.ipynb  analyze_probe_attn.py  attn_probes_generalization.py  building_probe.py  building_probe_last.py  case_studies.ipynb  cat_vis.ipynb  check_faith_cots.py  check_labeled_qs.ipynb  cluster_patching_swaps_q+cot_groups.py  collect_activations.py  compare_activations_files.py  compare_acts_files.ipynb  compare_attn_probe_directions.py  cot_vis.ipynb  diverse.ipynb  diverse_diff_gen.ipynb  diverse_gen2.0.ipynb  diverse_gen_again.ipynb  diverse_no.txt  diverse_unbiased.txt  diverse_yes.txt  evaluate.ipynb  freq_prob.ipynb  freqs.ipynb  gen_w_cache.ipynb  load_attn_probes.py  max_margin.ipynb  mean_shift.ipynb  no-cot-acc.ipynb  padding.ipynb  patching.ipynb  patching_swaps.ipynb  patching_swaps_fsp.ipynb  patching_swaps_q+cot.ipynb  patching_swaps_q+cot_groups.ipynb  patching_swaps_q+cot_two_slices.ipynb  patching_test.ipynb  probe_for_correct_answer_in_question.py  (+15 more)
results/: diff_direction_google--gemma-2-2b_snarks_S0_N151.pt  eval_google--gemma-2-2b_snarks_S0_N10.pkl  eval_google--gemma-2-2b_snarks_S0_N151.pkl
scripts/: assign_categories.py  attn_probe.py  chat_with_model.py  collect_activations.py  collect_questions.py  collect_swaps.py  delete_questions.py  detect_similar_qs.py  detect_similar_questions.py  evaluate_no_cot_accuracy.py  gen_responses.py  generate_cots.py  generate_qs.py  generate_questions.py  label_qs.py  measure_qs.py  patch_fsps.py  patch_new.py  patch_q+cot.py  patch_q+cot_groups.py  patch_q+cot_two_slices.py  (+9 more)
(+110 files in other folders)
