[project]
name = "cot_probing"
dynamic = ["version"]
dependencies = [
    "beartype==0.19.0",
    "black[jupyter]==24.8.0",
    "datasets==3.0.1",
    "fancy-einsum==0.0.3",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "ipywidgets==8.1.5",
    "isort==5.13.2",
    "jaxtyping==0.2.34",
    "matplotlib==3.9.2",
    "nbformat==5.10.4",
    "numpy==2.1.1",
    "pandas==2.2.3",
    "pip==24.2",
    "pre-commit==3.8.0",
    "pytest==8.3.3",
    "scipy==1.14.1",
    "torch==2.4.1",
    "tqdm==4.66.5",
    "transformers==4.45.1",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.dynamic]
version = {attr = "cot_probing.__version__"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]