[project]
name = "cot_probing"
dynamic = ["version"]
dependencies = [
    "accelerate==1.0.1",
    "basedpyright==1.19.1",
    "beartype==0.19.0",
    "bitsandbytes==0.44.1",
    "black[jupyter]==24.8.0",
    "datasets==3.0.1",
    "fancy-einsum==0.0.3",
    "ipykernel==6.29.5",
    "ipython==8.28.0",
    "ipywidgets==8.1.5",
    "isort==5.13.2",
    "jaxtyping==0.2.34",
    "matplotlib==3.9.2",
    "nbformat==5.10.4",
    "numpy==2.1.1",
    "openai==1.52.2",
    "pandas==2.2.3",
    "pip==24.3.1",
    "pre-commit==3.8.0",
    "pytest==8.3.3",
    "scikit_learn==1.5.2",
    "scipy==1.14.1",
    "torch==2.4.1",
    "tqdm==4.66.5",
    "transformers==4.46.0",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.dynamic]
version = {attr = "cot_probing.__version__"}

[tool.isort]
profile = "black"
skip = ["notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
typeCheckingMode = "basic"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"